tests/baselines/reference/multipleExportAssignmentsInAmbientDeclaration.errors.txt
tests/cases/compiler/multipleExportAssignmentsInAmbientDeclaration.ts(4,5): error TS2308: A module cannot have more than one export assignment.
tests/cases/compiler/multipleExportAssignmentsInAmbientDeclaration.ts(5,5): error TS2308: A module cannot have more than one export assignment.


==== tests/cases/compiler/multipleExportAssignmentsInAmbientDeclaration.ts (2 errors) ====
    declare module "m1" {
        var a: number
        var b: number;
        export = a;
        ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
        export = b;
        ~~~~~~~~~~~
!!! error TS2308: A module cannot have more than one export assignment.
    }